# OperaSim-PhysX

./: .editorconfig  .gitignore  3d_data.py  LICENSE  README.md  auto
Assets/: New Terrain.asset  TerrainData_df8316c6-9ade-4393-8269-439d49c1339c.asset  c30-r_refine_urdf.urdf  c30-r_test_urdf.urdf  excavator.unity  ic120_gazebo.urdf  msgbrowser_settings.asset  zx135u-base-optimized.urdf
Assets/Editor/: DumpDependencies.cs  HeightmapFromLas.cs  LandXML.cs  LandXMLMeshConverter.cs  LandXMLSurfaceParser.cs  LandXMLUnits.cs  Object2Terrain.cs
Assets/Machines/: BucketSoilSoftness.physicMaterial
Assets/Materials/: Black.mat  Orange.mat  Teal.mat  grey.mat
Assets/Other 3rd Party Series/msgs/com3_msgs/: CMakeLists.txt  package.xml
Assets/Other 3rd Party Series/msgs/com3_msgs/msg/: ExcavatorCom3MachineSetting.msg  FluidPressureArray.msg  JointCmd.msg
Assets/Other 3rd Party Series/msgs/gazebo_msgs/: CHANGELOG.rst  package.xml
Assets/Other 3rd Party Series/msgs/rosgraph_msgs/: CMakeLists.txt  package.xml
Assets/Prefab/: c30r.prefab  ic120.prefab  mst110cr.prefab  zx120.prefab  zx120_base.prefab  zx120_merge.prefab  zx120_new.prefab  zx135u.prefab  zx200.prefab
Assets/Resources/: Dig.compute  ROSConnectionPrefab.prefab  Thermal.compute
Assets/Scenes/: SampleScene.unity  SimpleScene.unity  zx120_edit.unity
Assets/Scripts/: BucketRocks.cs  Clock.cs  Com3FrontController.cs  Com3JointControlType.cs  CustomCollisionC30R.cs  CustomCollisionIC120.cs  CustomCollisionIZX120.cs  CustomCollisionIZX200.cs  DeadTime.cs  DiffDriveController.cs  EmergencyStop.cs  ExcavatorDiffDriveControllers.cs  FollowJointTrajectoryAction.cs  FrontDriveGainParamSubscriber.cs  GroundTruthPublisher.cs  GroundTruthTFPublisher.cs  HeightmapFromTexture.cs  IKFix.cs  JointPosController.cs  JointStatePublisher.cs  JointVelController.cs  LinkLocalTFPublisher.cs  MeasureDistance.cs  OdomPublisher.cs  OperaSimPhysXAssembly.asmdef  PoseStampedPublisher.cs  QuaternionStampedPublisher.cs  ROSClockPublisher.cs  RealtimeFactorProfiler.cs  SoilParticleSettings.cs  SpawnModelServer.cs  TerrainTiler.cs  Test.cs  TimeStamp.cs  UpdateZX120Param.cs  Utils.cs  VesselController.cs  WorldClock.cs
Assets/StreamConfig/: zx120_config.json
Assets/Terrains/: CollageWeb.terrainlayer  DXField.terrainlayer  New Terrain.asset  PWRI-DXField.terrainlayer  TerrainData_93951e2d-2660-45db-ad16-0c1df936490b.asset  TerrainData_c82abbc7-00e4-4be6-a68c-9c90607633bb.asset
Assets/c30-r_description/: CMakeLists.txt
Assets/excavator_model/: CMakeLists.txt
Assets/ic120_model/: CMakeLists.txt
Assets/meshes/: Cylinder 1.asset  Cylinder 10.asset  Cylinder 100.asset  Cylinder 103.asset  Cylinder 104.asset  Cylinder 107.asset  Cylinder 109.asset  (+43 more)
ProjectSettings/: DynamicsManager.asset  ProjectSettings.asset  ProjectSettings.asset.orig  QualitySettings.asset  TagManager.asset
(+2953 files in other folders)
